// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateResourceModal modal convertFilterArray as expected 1`] = `
Array [
  Object {
    "key": "standards",
    "value": Object {
      "availableSet": Array [
        "FISMA",
        "PCI",
        "HIPAA",
        "NIST",
      ],
      "name": "Standards",
    },
  },
  Object {
    "key": "categories",
    "value": Object {
      "availableSet": Array [
        "System And Communications Protections",
        "System And Information Integrity",
      ],
      "name": "Categories",
    },
  },
  Object {
    "key": "controls",
    "value": Object {
      "availableSet": Array [
        "Secret Encryption",
        "Cert Manager",
        "Mutation Advisor",
        "VA",
      ],
      "name": "Controls",
    },
  },
  Object {
    "key": "type",
    "value": Object {
      "availableSet": Array [
        "Enforce",
        "Inform only",
      ],
      "name": "Type",
    },
  },
  Object {
    "key": "severity",
    "value": Object {
      "availableSet": Array [],
    },
  },
]
`;

exports[`CreateResourceModal modal convertFilterArray as expected 2`] = `
<NestedTable
  availableItems={
    Array [
      Object {
        "key": "standards",
        "value": Object {
          "availableSet": Array [
            "FISMA",
            "PCI",
            "HIPAA",
            "NIST",
          ],
          "name": "Standards",
        },
      },
      Object {
        "key": "categories",
        "value": Object {
          "availableSet": Array [
            "System And Communications Protections",
            "System And Information Integrity",
          ],
          "name": "Categories",
        },
      },
      Object {
        "key": "controls",
        "value": Object {
          "availableSet": Array [
            "Secret Encryption",
            "Cert Manager",
            "Mutation Advisor",
            "VA",
          ],
          "name": "Controls",
        },
      },
      Object {
        "key": "type",
        "value": Object {
          "availableSet": Array [
            "Enforce",
            "Inform only",
          ],
          "name": "Type",
        },
      },
      Object {
        "key": "severity",
        "value": Object {
          "availableSet": Array [],
        },
      },
    ]
  }
  header="Name"
  selectedItems={
    Array [
      "testConvertFilterArray",
    ]
  }
  selectionChanged={[MockFunction]}
/>
`;

exports[`CreateResourceModal modal handleSubmitClick as expected 1`] = `
Object {
  "tags": Array [],
}
`;

exports[`CreateResourceModal modal renders as expected 1`] = `ShallowWrapper {}`;

exports[`CreateResourceModal modal selectionChanged as expected 1`] = `
Object {
  "tags": Array [
    "testSelectionChanged1",
    "testSelectionChanged2",
  ],
}
`;
